# study-wiki

./: deploy.sh  docker-compose.yml  sign-certificat.sh  study-wiki.conf
backend/: CMakeLists.txt  Dockerfile  README
backend/src/: Dockerfile  main.cpp
backend/src/config/: Config.hpp
backend/src/db/: ConnectionPool.hpp  QueryHelpers.hpp
backend/src/db/migrations/: 001_init.sql  003_suggestions.sql  004_admin_system.sql
backend/src/middleware/: AuthGuard.hpp  RateLimiter.hpp
backend/src/migrations/: 001_init.sql  002_badges.sql
backend/src/routes/: AdminRequestRoutes.hpp  AdminRoutes.hpp  AuthRoutes.hpp  CommentRoutes.hpp  DocumentRoutes.hpp  LeaderboardRoutes.hpp  ReportRoutes.hpp  SearchRoutes.hpp  SuggestionRoutes.hpp  UserRoutes.hpp
backend/src/services/: GamificationService.hpp
backend/src/session/: SessionManager.hpp
backend/src/utils/: Crypto.hpp
frontend/: README  admin.html  document.html  index.html  leaderboard.html  login.html  profile.html  register.html  suggestions.html  upload.html
frontend/css/: base.css
frontend/js/: api.js  auth.js
frontend/js/pages/: admin.js  document.js  index.js  leaderboard.js  login.js  profile.js  register.js  suggestions.js  upload.js
